# Final_project

./: .dockerignore  .gitignore  COMPONENTS_AND_USAGE.md  Dockerfile  Placement_to_routing_converter.py  README_USAGE.md  pyproject.toml  run_complete_flow.py  visualizer.py
nthuRouter3/src/grdb/: subdir.mk
nthuRouter3/src/misc/: subdir.mk
nthuRouter3/src/router/: subdir.mk
nthuRouter3/src/spdlog/fmt/bundled/: subdir.mk
utils/: __init__.py  converter.py  file_validator.py  path_manager.py  placer.py  router.py
